<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/rectangle"
    android:orientation="horizontal"
    android:padding="15dp"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/ListCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/ListCheckbox"
        android:clickable="true"
        android:text="List"
        android:textSize="30sp" />

    <ImageButton
        android:id="@+id/EditListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="5dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:srcCompat="@drawable/ic_baseline_edit_24"
        tools:ignore="DuplicateSpeakableTextCheck" />

</RelativeLayout>