...
            android:hint="@string/EnterName"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />
    </LinearLayout>

    <Button
        android:id="@+id/CreateListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/CreateList"
        app:layout_constraintEnd_toEndOf="parent"
...
